  * Update and synchronize with SE3 scripts : Import Sconet
  * Add chg_gidNumber.sh in /usr/share/lcs/scripts
  * Replace deprecated PHP 5.3 functions
  * Don't allow reauthentication if already authenticate in auth.php
  * Rename function search_people_trash to search_people_trash_lcs 
  * Modify mkTicket.rb to generate CAS ticket with gem rubycas-server

  [ Raphaël Hertzog ]
  * Remove /tmp/{applilcs,moduleslcs}.xml before calling wget otherwise wget
    might download into {applilcs,moduleslcs}.xml.1 and we don't see the new
    content. This is required because when a broken XML file is downloaded,
    it's not removed...
  * Add new page "Synchronization Active Directory" in the administration
    menu and associated features in the directory application.
  * Implement uidPolicy=20 and 21 for compatiblity with the HARP directory in
    use in the académie of grenoble.

  [ Philippe LECLERC ]
  * add display infos in modules_installes.php
  * add display infos with gestpack.sh when package is hold
  * add activation/desactivation modules
  * fix damage collateral of change.sh on mod_mail.php

  [ Cyril Bouthors ]
  * Added support for hooks in /usr/share/lcs/lcs-web-hooks.d

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 26 Nov 2010 14:58:00 +0100

lcs-web (2.4.7) Lcs; urgency=low

  * Fix bug  maj modules Auto/Manu (scripts modules_installes.php and boutons_style.css)
  * Fix bug in script select_briques.php 
  * MisterPhi : 
    * Modify process process statistics
    * Add redirect mail 
    * Add link mail to groups
    * Add strong authentification system based on swekey  
  * Add password user init and group listing in appli Annu
  * Add a function acces_btn_admin in function_inc.php
  * Modify rights acces for administration page in barre.php 
  * Add lcs-libjs dependence
  * Modify lcs-web-fixrights
  * Change the package structure for the implementation of menu.d modularization
  * Change upgrade to dist-upgrade in LcsMaj 